# AudioVideo

./: 10_0_OPENCV.ipynb  10_1_OPENCV.ipynb  7_Final_Flux_IA.md  Projet_1.ipynb  Projet_2.ipynb  Projet_Bonus.ipynb  UrbanSound8K - CNN + MEL + MLP.ipynb  main.py  pyproject.toml
