[project]
name = "audiovideo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pyaudio>=0.2.14",
    "setuptools>=82.0.0",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
]
